docs/apim/4.10/create-and-configure-apis/apply-policies/policy-reference/dynamic-routing.md
---
description: The Dynamic Routing policy dispatches calls to different targets or rewrites URIs in API Management 4.10. Learn how to configure it.
metaLinks:
  alternates:
    - dynamic-routing.md
---

# Dynamic Routing

## Overview

The `dynamic-routing` policy is used to dispatch inbound calls to different targets and endpoints or to rewrite URIs. This policy is useful for creating API mashups.

Another use case is defining routing similar to the following:

* Requests from `http://gateway/apis/store/12/info` are redirected to `http://backend_store12/info`
* Requests from `http://gateway/apis/store/45/info` are redirected to `http://backend_store45/info`

{% hint style="warning" %}
This policy can be applied to v2 APIs and v4 HTTP proxy APIs. It cannot be applied to v4 message APIs or v4 TCP proxy APIs.
{% endhint %}

## Examples

### Typical Routing

The following sample configuration routes requests matching `/v1/stores/(.*)` to a different host:

{% tabs %}
{% tab title="HTTP proxy API example" %}
Sample policy configuration:

```json
"dynamic-routing": {
    "rules": [
        {
            "pattern": "/v1/stores/(.*)",
            "url": "http://host2/stores/{#group[0]}"
        }
    ]
}
```

You can also select endpoints configured for your API by name using Gravitee Expression Language:

```json
"dynamic-routing": {
    "rules": [
        {
            "pattern": "/v1/stores/(.*)",
            "url": "{#endpoints['default']}/{#group[0]}"
        }
    ]
}
```
{% endtab %}
{% endtabs %}

### Routing using Entrypoint context-paths and flow conditions

The `dynamic-routing` policy can be configured to work with the APIs' (multiple) &#x45;_&#x6E;trypoint context-paths_ as well.  For example, if you have multiple entrypoint context-paths to your API (as shown below), you can route requests on these paths to different backend services.

<figure><img src="../../../.gitbook/assets/config-apis-apply-policies-policy-r-239.png" alt="The Entrypoint context-paths panel with virtual hosts enabled and two context paths defined, each with a remove icon."><figcaption><p>An API configuration, showing multiple entrypoint context-paths</p></figcaption></figure>

1. In the API Policy Studio, create a new flow for each entrypoint context-path.

<figure><img src="../../../.gitbook/assets/config-apis-apply-policies-policy-r-240.png" alt="The Policies page with two flows listed under All plans, the first selected, showing a Dynamic Routing policy in the request phase and a condition matching its context path."><figcaption><p>An API configuration, showing multiple Flows</p></figcaption></figure>

2. For each of your new Flows, apply a _**Flow Condition**_ that matches the entrypoint context-path - using the `request.contextPath` attribute:

{% columns %}
{% column %}
<figure><img src="../../../.gitbook/assets/config-apis-apply-policies-policy-r-241.png" alt="The Edit flow dialog, with a flow name, the Starts with path operator, an empty path, all methods selected, and a condition matching one context path."><figcaption><p>Flow condition for the <code>/entrypoint-path-A</code> entrypoint context-path</p></figcaption></figure>
{% endcolumn %}

{% column %}
<figure><img src="../../../.gitbook/assets/config-apis-apply-policies-policy-r-242.png" alt="The Edit flow dialog for the second flow, with its name highlighted and a condition matching the other context path."><figcaption><p>Flow condition for the <code>/entrypoint-path-BB</code> entrypoint context-path</p></figcaption></figure>
{% endcolumn %}
{% endcolumns %}

3. In each flow, add the `dynamic-routing` policy and configure the target backend service. For example:
   * Requests starting with `https://gateway/entrypoint-path-A/` route to `https://some.other.service/some-other-api/`
   * Requests starting with `https://gateway/entrypoint-path-BB/` route to `https://another.service/second-api/`

{% columns %}
{% column %}
<figure><img src="../../../.gitbook/assets/config-apis-apply-policies-policy-r-243.png" alt="The Dynamic Routing policy dialog, with an empty trigger condition and a routing rule that matches any path and redirects to another service using a capture group."><figcaption><p>Dynamic Routing policy used within the Flow that has the <code>{#request.contextPath=='/entrypoint-path-A'}</code> condition</p></figcaption></figure>

Requests (that start with) `https://gateway/entrypoint-path-A/` will be routed to `https://some.other.service/some-other-api/`
{% endcolumn %}

{% column %}
<figure><img src="../../../.gitbook/assets/config-apis-apply-policies-policy-r-244.png" alt="The Dynamic Routing policy dialog, with an empty trigger condition and a routing rule that matches any path and redirects to another service using a capture group."><figcaption><p>Dynamic Routing policy used within the Flow that has the <code>{#request.contextPath=='/entrypoint-path-BB'}</code> condition</p></figcaption></figure>

Requests (that start with) `https://gateway/entrypoint-path-BB/` will be routed to `https://another.service/second-api/`
{% endcolumn %}
{% endcolumns %}

## Configuration

You can configure multiple rules and their respective redirections relative to the initial request path. When you define rules, it is important to remember that the API `context-path` must not be part of the rule’s path.

For example, if your `context-path` is `/myapi` and your call is `/myapi/123`, if you want to select `123`, the regular expression is `/(.*)` (don’t forget the `/`).

### Regular expressions

Using regular expressions can be very useful when you want to capture some parts of the initial request path and reuse them to define the redirection.

For example, to capture the end of a path after `/v1/stores/`, the rule path is `/v1/stores/(.*)`. You can then use it in the `redirect to` property: `http://store_backend/stores/{#group[0]}`

You can also use named groups instead of indexed groups: `/api/(?<version>v[0-9]+)/stores.*` ⇒ `http://host1/products/api/{#groupName['version']}`

### Phases

The phases checked below are supported by the `dynamic-routing` policy:

<table data-full-width="false"><thead><tr><th width="202">v2 Phases</th><th width="139" data-type="checkbox">Compatible?</th><th width="198">v4 Phases</th><th data-type="checkbox">Compatible?</th></tr></thead><tbody><tr><td>onRequest</td><td>true</td><td>onRequest</td><td>true</td></tr><tr><td>onResponse</td><td>false</td><td>onResponse</td><td>false</td></tr><tr><td>onRequestContent</td><td>false</td><td>onMessageRequest</td><td>false</td></tr><tr><td>onResponseContent</td><td>false</td><td>onMessageResponse</td><td>false</td></tr></tbody></table>

### Attributes

The `dynamic-routing` policy can be configured with the following attributes:

<table data-full-width="false"><thead><tr><th width="172.6214599609375">Name</th><th width="572.3992919921875">Description</th></tr></thead><tbody><tr><td>request.endpoint</td><td>The endpoint URL invoked by the gateway after dynamic routing</td></tr></tbody></table>

## Compatibility matrix

The following is the compatibility matrix for APIM and the `dynamic-routing` policy:

<table data-full-width="false"><thead><tr><th>Plugin Version</th><th>Supported APIM versions</th></tr></thead><tbody><tr><td>Up to 1.x</td><td>All</td></tr></tbody></table>

## Errors

<table data-full-width="false"><thead><tr><th width="210">Phase</th><th width="171">HTTP status code</th><th width="387">Message</th></tr></thead><tbody><tr><td>onRequest</td><td><code>400</code></td><td>When no rules match the inbound request</td></tr></tbody></table>

## Changelogs

{% @github-files/github-code-block url="https://github.com/gravitee-io/gravitee-policy-dynamic-routing/blob/master/CHANGELOG.md" %}
